[package]
authors = ["LIAUD Corentin <corentin.liaud@orange.fr>"]
build = "src/build.rs"
description = "Rust local DNS adblocker"
edition = "2021"
license = "MIT"
name = "rhole"
readme = "README.md"
repository = "https://github.com/cocool97/rhole"
version = "0.1.2"

[[bin]]
name = "rhole"

[profile.release]
codegen-units = 1
debug-assertions = false
lto = "thin"
opt-level = 'z'
strip = true

[dependencies]
anyhow = { version = "= 1.0.68" }
async-trait = { version = "= 0.1.59" }
bytes = { version = "= 1.3.0" }
clap = { version = "= 4.0.29", features = ["derive"] }
env_logger = { version = "= 0.10.0" }
log = { version = "= 0.4.17" }
regex = { version = "= 1.7.0" }
reqwest = { version = "= 0.11.13", default-features = false, features = ["rustls-tls"] }
serde = { version = "= 1.0.149", features = ["derive"] }
serde_yaml = { version = "= 0.9.14" }
sled = { version = "= 0.34.7" }
sqlx = { version = "= 0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "= 1.23.0", features = ["fs", "macros", "rt-multi-thread"] }
trust-dns-client = { version = "= 0.22.0" }
trust-dns-resolver = { version = "= 0.22.0", features = ["tokio-runtime"] }
trust-dns-server = { version = "= 0.22.0" }

[build-dependencies]
anyhow = { version = "= 1.0.68" }
vergen = { version = "= 7.4.3" }

[package.metadata.generate-rpm]
assets = [
    { source = "config.yml", dest = "/etc/rhole/config.yml", mode = "755", config = true },
    { source = "rhole.service", dest = "/etc/systemd/system/rhole.service", mode = "755" },
    { source = "target/armv7-unknown-linux-musleabihf/release/rhole", dest = "/usr/bin/rhole", mode = "755" },
]

[package.metadata.deb]
assets = [
    [
        "config.yml",
        "/etc/rhole/config.yml",
        "755",
    ],
    [
        "rhole.service",
        "/etc/systemd/system/rhole.service",
        "755",
    ],
    [
        "target/armv7-unknown-linux-musleabihf/release/rhole",
        "/usr/bin/rhole",
        "755",
    ],
]
