[package]
edition = "2021"
name = "app"
version = "0.1.0"

[dependencies]
anyhow = { version = "= 1.0.68" }
common = { path = "../common" }
lazy_static = { version = "= 1.4.0" }
log = { version = "= 0.4.17" }
reqwest = { version = "= 0.11.13", features = ["json"] }
wasm-bindgen-futures = { version = "= 0.4.33" }
wasm-logger = { version = "= 0.2.0" }
web-sys = { version = "= 0.3.60", features = ["Location"] }
yew = { version = "= 0.20.0", features = ["csr"] }
