[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "entity"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.10" }
