[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "app"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { version = "= 1.0.69" }
chrono = { version = "= 0.4.23" }
common = { path = "../rhole-common" }
lazy_static = { version = "= 1.4.0" }
log = { version = "= 0.4.17" }
reqwest = { version = "= 0.11.14", default-features = false, features = [
    "json",
    "rustls-tls",
] }
wasm-bindgen-futures = { version = "= 0.4.34" }
wasm-logger = { version = "= 0.2.0" }
web-sys = { version = "= 0.3.61", features = ["Location"] }
yew = { version = "= 0.20.0", features = ["csr"] }
yew-router = { version = "= 0.17.0" }
yew_icons = { version = "= 0.7.0", features = [
    "BootstrapBarChartLine",
    "BootstrapListCheck",
    "BootstrapPeople",
    "HeroiconsOutlineInformationCircle",
    "BootstrapFileEarmarkBinary"
] }
