[package]
authors.workspace = true
description = "Rust local DNS adblocker"
edition.workspace = true
license.workspace = true
name = "rhole-server"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { version = "1.0.71" }
async-graphql = { version = "6.0.7" }
async-graphql-axum = { version = "6.0.11" }
async-trait = { version = "0.1.64" }
axum = { version = "0.6.20" }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
bytes = { version = "1.4.0" }
clap = { version = "4.2.10", features = ["derive", "env"] }
entity = { path = "../entity" }
env_logger = { version = "0.10.0" }
futures = { version = "0.3.25" }
hickory-client = { version = "0.24.0" }
hickory-resolver = { version = "0.24.0", features = [
    "native-certs",
    "tokio-runtime",
] }
hickory-server = { version = "0.24.0", features = ["dns-over-rustls"] }
humantime = { version = "2.1.0" }
log = { version = "0.4.17" }
migration = { path = "../migration" }
regex = { version = "1.7.1" }
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
] }
rustls = { version = "0.21.9", features = ["tls12"] }
rustls-pemfile = { version = "2.0.0" }
rustls-pki-types = { version = "1.0.0" }
sea-orm = { version = "0.12.10", features = [
    "runtime-tokio",
    "sqlx-sqlite",
] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = { version = "0.9.17" }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.25.0", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.4", features = ["add-extension", "fs"] }
uuid = { version = "1.6.1", features = ["fast-rng", "v4"] }

[package.metadata.generate-rpm]
assets = [
    { source = "config.yml", dest = "/etc/rhole/config.yml", mode = "755", config = true },
    { source = "dist/*", dest = "/etc/rhole/web", mode = "600" },
    { source = "rhole.service", dest = "/etc/systemd/system/rhole.service", mode = "755" },
    { source = "target/x86_64-unknown-linux-musl/release/rhole", dest = "/usr/bin/rhole", mode = "755" },
]
