[package]
authors.workspace = true
build = "src/build.rs"
description = "Rust local DNS adblocker"
edition.workspace = true
license.workspace = true
name = "rhole"
readme = "README.md"
version.workspace = true
repository.workspace = true

[dependencies]
actix-files = { version = "0.6.2" }
actix-web = { version = "4.2.1" }
anyhow = { version = "= 1.0.69" }
async-trait = { version = "= 0.1.64" }
bytes = { version = "= 1.4.0" }
clap = { version = "= 4.1.4", features = ["derive"] }
common = { path = "../rhole-common" }
env_logger = { version = "= 0.10.0" }
futures = { version = "0.3.25" }
humantime = { version = "= 2.1.0" }
log = { version = "= 0.4.17" }
regex = { version = "= 1.7.1" }
reqwest = { version = "= 0.11.14", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "= 1.0.152", features = ["derive"] }
serde_yaml = { version = "= 0.9.17" }
sled = { version = "= 0.34.7" }
sqlx = { version = "= 0.6.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "= 1.25.0", features = ["fs", "macros", "rt-multi-thread"] }
trust-dns-client = { version = "= 0.22.0" }
trust-dns-resolver = { version = "= 0.22.0", features = ["tokio-runtime"] }
trust-dns-server = { version = "= 0.22.0" }

[build-dependencies]
anyhow = { version = "= 1.0.69" }
vergen = { version = "= 7.5.0" }

[package.metadata.generate-rpm]
assets = [
    { source = "config.yml", dest = "/etc/rhole/config.yml", mode = "755", config = true },
    { source = "dist/*", dest = "/etc/rhole/web", mode = "600" },
    { source = "target/x86_64-unknown-linux-musl/release/rhole", dest = "/usr/bin/rhole", mode = "755" },
    { source = "rhole.service", dest = "/etc/systemd/system/rhole.service", mode = "755" },
]
