[package]
authors = ["LIAUD Corentin <corentin.liaud@orange.fr>"]
build = "src/build.rs"
description = "Rust local DNS adblocker"
edition = "2021"
license = "MIT"
name = "server"
readme = "README.md"
repository = "https://github.com/cocool97/rhole"
version = "0.1.6"

[dependencies]
actix-files = { version = "0.6.2" }
actix-web = { version = "4.2.1" }
anyhow = { version = "= 1.0.68" }
async-trait = { version = "= 0.1.61" }
bytes = { version = "= 1.3.0" }
clap = { version = "= 4.0.32", features = ["derive"] }
common = { path = "../common" }
env_logger = { version = "= 0.10.0" }
futures = { version = "0.3.25" }
humantime = { version = "= 2.1.0" }
log = { version = "= 0.4.17" }
regex = { version = "= 1.7.1" }
reqwest = { version = "= 0.11.13", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "= 1.0.152", features = ["derive"] }
serde_yaml = { version = "= 0.9.16" }
sled = { version = "= 0.34.7" }
sqlx = { version = "= 0.6.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "= 1.24.1", features = ["fs", "macros", "rt-multi-thread"] }
trust-dns-client = { version = "= 0.22.0" }
trust-dns-resolver = { version = "= 0.22.0", features = ["tokio-runtime"] }
trust-dns-server = { version = "= 0.22.0" }

[build-dependencies]
anyhow = { version = "= 1.0.68" }
vergen = { version = "= 7.5.0" }

[package.metadata.generate-rpm]
assets = [
    { source = "../dist/*", dest = "/etc/rhole/web", mode = "600" },
    { source = "../config.yml", dest = "/etc/rhole/config.yml", mode = "755", config = true },
    { source = "rhole.service", dest = "/etc/systemd/system/rhole.service", mode = "755" },
    { source = "../target/x86_64-unknown-linux-musl/release/server", dest = "/usr/bin/rhole", mode = "755" },
]
